# AndroidSystemServicePenetration

./: CMakeLists.txt  FUNDING.yml  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/chickenhook/AndroidHackingTemplate/: BinderParcelExploit.kt  ExampleInstrumentedTest.kt
app/src/androidTest/java/org/chickenhook/parcelexploittester/: BinderParcelExploit.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/chickenhook/AndroidHackingTemplate/: MainActivity.kt
app/src/main/java/org/chickenhook/AndroidHackingTemplate/penetration/: ClipboardManagerCrash.kt  IExploit.java  PackageManagerCrash.kt  ServiceManagerCrash.kt
app/src/main/java/org/chickenhook/parcelexploittester/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/chickenhook/AndroidHackingTemplate/: ExampleUnitTest.kt
app/src/test/java/org/chickenhook/parcelexploittester/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt  video.txt
myAndroidHackingLibrary/: CMakeLists.txt
myAndroidHackingLibrary/src/androidTest/java/org/chickenhook/myandroidhackinglibrary/: ExampleInstrumentedTest.kt
myAndroidHackingLibrary/src/main/: AndroidManifest.xml
myAndroidHackingLibrary/src/main/cpp/: interface.cpp
myAndroidHackingLibrary/src/main/java/org/chickenhook/myandroidhackinglibrary/: NativeInterface.java
myAndroidHackingLibrary/src/test/java/org/chickenhook/myandroidhackinglibrary/: ExampleUnitTest.kt
(+7 files in other folders)
